Fix Issues with Header / Nav not overflowing OK
Why:
Whilst testing website on live, noticed that Header/Navbar would overflow
in weird ways at 120%+ zoom where the navbar would move down over 400px
below.

How:
Investigated and redesigned current design of Header as required to Fix
issue. Gap used between Header and NAV was far too high and was being
used as a spacer rather than Flex end used on NAV.

- Applied Flex end on NAV elements and reduced GAP as required to allow
flex-wrap to apply to only require when required, rather than 600px too
early on header wrapper.

- Checked all other wrappers, slight change made to max width of hero text
to allow auto flex-wrap with this to allow for more responsiveness of page.

Current TODO: List / Bug list
TODO:

--- a/style.css
+++ b/style.css
@@ -48,12 +48,11 @@ footer {
 
 .header-wrapper {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-content: center;
   background-color: #122121;
-  gap: 400px;
+  gap: 20px;
   flex-wrap: wrap;
-  flex: 1;
   min-width: 600px;
 }
 
@@ -62,7 +61,6 @@ footer {
   margin-left: 10px;
   align-items: center;
   display: flex;
-  flex: 1;
 }
 
 .logo > .l1 {
@@ -81,12 +79,13 @@ footer {
 .title-nav {
   display: flex;
   flex: 1;
+  justify-content: flex-end;
 }
 
 .title-nav ul {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: ;
   gap: 20px;
 }
 
@@ -114,6 +113,7 @@ footer {
   flex-basis: 100%;
   align-items: center;
   justify-content: center;
+  min-width: 500px;
   gap: 80px;
   flex-wrap: wrap;
 }
